# uou-interactive-graphics

./: .gitignore  Cargo.toml  build-and-codesign.sh  build-release-asm.sh  performance.md  readme.md  todo.md
asset-compiler/: Cargo.toml
asset-compiler/src/: cube_texture.rs  lib.rs
build-hash/: Cargo.toml
build-hash/src/: lib.rs
common-assets/plane/: plane.mtl
metal-app/: Cargo.toml
metal-app/src/: application.rs  image_helpers.rs  lib.rs  math_helpers.rs  matrix_helpers.rs  metal_helpers.rs  model_acceleration_structure.rs  render_pipeline.rs  renderer.rs  time.rs  typed_buffer.rs  ui_ray.rs  unwrap_helpers.rs
metal-app/src/components/: camera.rs  depth_texture.rs  light.rs  mod.rs  screen_size_texture.rs  shading_mode_selector.rs  shadow_map_texture.rs  texture_and_config.rs  ui_ray.rs
metal-app/src/model/: geometry.rs  heap_resident.rs  materials.rs  mod.rs
metal-app/src/pipeline/: bind.rs  compute_pipeline.rs  function.rs  mod.rs  pipeline_function.rs  render_pipeline.rs  tesselation_render_pipeline.rs
metal-build/: Cargo.toml  build.rs
metal-build/src/: generate_shader_function_bindings.rs  lib.rs  metal_types.rs  parse_shader_function.rs  rust-bindgen-only-vector-types.h  rust_bindgen_only_metal_type_bindings.rs  rust_bindgen_only_metal_types_h_hash  rust_bindgen_only_metal_types_list.rs  shader_function_parser.rs  vector_type_helpers.rs
metal-build/test_shader_src/: shader_bindings.h  shaders.metal
metal-shaders/: Cargo.toml
metal-shaders/shader_src/: common-bindings.h  shader_bindings.h  shader_bindings_h_hash  shaders.metal  shading.h
metal-shaders/src/: shader_bindings.h  shader_bindings.rs  shader_bindings_rs_hash  shaders.metal  shading.h
metal-types/: Cargo.toml  build.rs
metal-types/src/: all_metal_types.h  all_metal_types.rs  all_metal_types_h_hash  all_metal_types_list.rs  debug-path.h  lib.rs  macros.h  metal.h  projected-space.h  rust_bindgen_only_metal_type_bindings.rs  rust_bindgen_only_metal_types.h  rust_bindgen_only_metal_types.rs  rust_bindgen_only_metal_types_h_hash  rust_bindgen_only_metal_types_list.rs  shaders.metal  shading-mode.h  tri_normals.h  tri_normals.rs  tri_normals_index.h  tri_normals_index.rs
png-add-alpha/: Cargo.toml
png-add-alpha/src/: main.rs
proj-1-hello-world/: Cargo.toml  build.rs  readme.md
proj-1-hello-world/project-requirements/: CS 5610_6610 - Spring 2022 - Interactive Computer Graphics.html
proj-1-hello-world/project-requirements/CS 5610_6610 - Spring 2022 - Interactive Computer Graphics_files/: shCoreDefault.css
proj-1-hello-world/shader_src/: common.h  rust-bindgen-only-vector-types.h
proj-1-hello-world/src/: application.rs  lib.rs  main.rs  renderer.rs  shader_bindings.rs
proj-2-transformations/: Cargo.toml  readme.md
proj-2-transformations/project-requirements/: CS 5610_6610 - Spring 2022 - Interactive Computer Graphics.html
proj-2-transformations/shader_src/: common.h  common_h_hash  shader_bindings.h  shader_bindings_h_hash  shaders.metal
proj-2-transformations/src/: lib.rs  main.rs  shader_bindings.rs  shader_bindings_rs_hash  shaders.metal
proj-3-camera-space/: Cargo.toml  readme.md
proj-3-camera-space/src/: main.rs  shader_bindings.h  shader_bindings.rs  shader_bindings_rs_hash  shaders.metal
proj-3-shading/: Cargo.toml  readme.md
proj-3-shading/project-requirements/: CS 5610_6610 - Spring 2022 - Interactive Computer Graphics.html
proj-3-shading/shader_src/: common.h  common_h_hash  shader_bindings.h  shader_bindings_h_hash  shaders.metal
proj-3-shading/src/: lib.rs  main.rs  shader_bindings.rs  shader_bindings_rs_hash  shaders.metal
proj-4-textures/: Cargo.toml  readme.md  todo-yoda.md
proj-4-textures/project-requirements/: CS 5610_6610 - Spring 2022 - Interactive Computer Graphics.html
proj-5-render-buffers/: Cargo.toml  readme.md
proj-6-environment-mapping/: Cargo.toml  build.rs  readme.md
proj-6-environment-mapping/assets/: cubemap_asset_hash
proj-6-environment-mapping/assets/cubemap.asset/: metadata.info  posy
proj-6-environment-mapping/project-requirements/: CS 5610_6610 - Spring 2022 - Interactive Computer Graphics.html
proj-6-environment-mapping/shader_src/: common.h  common_h_hash  shader_bindings.h  shader_bindings_h_hash  shaders.metal  shading.h
proj-6-environment-mapping/src/: lib.rs  main.rs  shader_bindings.rs  shader_bindings_rs_hash  shader_bindings_skips.rs  shaders.metal
proj-6-ray-traced-reflections/: Cargo.toml  readme.md
proj-6-ray-traced-reflections/shader_src/: shader_bindings.h  shader_bindings_h_hash  shaders.metal
proj-6-ray-traced-reflections/src/: main.rs  shader_bindings.rs  shader_bindings_rs_hash  shaders.metal
proj-7-ray-traced-shadows/: Cargo.toml  readme.md
proj-7-shadow-mapping/: Cargo.toml  readme.md
proj-8-tesselation/: Cargo.toml  readme.md
proj-final/: Cargo.toml
scripts/: asm-gen.sh  asm-open-diff.sh
shader_src/: common.h  shaders.metal
src/: application.rs  main.rs  metal_helpers.rs  objc_helpers.rs  shader_bindings.rs  unwrap_helpers.rs
x-rt/: Cargo.toml
yolo/: Cargo.toml
(+85 files in other folders)
