[package]
name = "asset-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

metal = { git = "https://github.com/peterwmwong/metal-rs.git", rev = "e7f2bf8c8c270ef666670e7b164541047491e1ed" }
png = "0.17.5"
