[package]
name = "asset-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

metal = { git = "https://github.com/peterwmwong/metal-rs.git", rev = "77c23cf186e29989236206ee0817d01489f6a355" }
png = "0.17.5"
