[package]
name = "asset-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

metal = { git = "https://github.com/peterwmwong/metal-rs.git", rev = "71e5f4954e32516d9d804607ce51510cd33f773d" }
png = "0.17.5"
