[package]
name = "metal-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
cocoa = "0.24"
core-graphics = "0.22.3"
core-graphics-types = "0.1.1"
dispatch = "0.2.0"
display-link = "0.2.0"
foreign-types = "0.3.2"
metal = { git = "https://github.com/peterwmwong/metal-rs.git", rev = "808cba3b6791ad674b9882793fe141bcb3911b98" }
metal-types = { path = "../metal-types" }
png = "0.17.5"
tobj = "3.2.2"

[dependencies.objc]
version = "0.2.7"
features = ["objc_exception"]