[package]
name = "metal-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
half = "2.1.0"
metal = { git = "https://github.com/peterwmwong/metal-rs.git", rev = "e8020b6b79f7dfaad290e3563bda4a7fa34b534d" }

[build-dependencies]
bindgen = "0.60.1"
build-hash = { path = "../build-hash" }
