[package]
name = "metal-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
half = "2.1.0"
metal = { git = "https://github.com/peterwmwong/metal-rs.git", rev = "71e5f4954e32516d9d804607ce51510cd33f773d" }

[build-dependencies]
bindgen = "0.60.1"
build-hash = { path = "../build-hash" }
