[package]
name = "proj-6-ray-traced-reflections"
version = "0.1.0"
edition = "2021"

[build-dependencies]
asset-compiler = { path = "../asset-compiler" }
build-hash = { path = "../build-hash" }
metal-build = { path = "../metal-build" }

[dependencies]
asset-compiler = { path = "../asset-compiler" }
metal-app = { path = "../metal-app" }
png = "0.17.5"